--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
 cycler==0.10.0
-h5py==2.9.0
-imageio==2.5.0
-numpy==1.16.3
-opencv-python==4.1.0.25
-pandas==0.24.2
-Pillow==6.0.0
-scikit-learn==0.21.2
+matplotlib==3.0.3
+numpy==1.18.5
 scipy==1.3.0
-six==1.12.0
 tensorboard==1.13.1
 tensorboardX==1.7
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
 torch==1.1.0
 torchvision==0.3.0
